Es müssen als naechstes die stecker der Z-Stepper gemaess der datei printer_new gesteckt werden

--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -94,14 +94,18 @@ square_corner_velocity: 5.0
 
 ##  Connected to X on mcu_xye (B Motor)
 [stepper_x]
+microsteps: 64
 step_pin: P2.2
-dir_pin: !P2.6
+dir_pin: !P2.6 #nur den
 enable_pin: !P2.1
 rotation_distance: 40
-microsteps: 32
+#endstop_pin: P1.29
+endstop_pin: tmc2209_stepper_x:virtual_endstop
+homing_retract_dist: 0
+homing_speed:25
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: P1.29
-position_min: 0
+# homing_positive_dir: true // mir ist dieser Teil unklar
+
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
@@ -114,31 +118,40 @@ position_min: 0
 
 ##  Uncomment for 350mm build
 #position_endstop: 350
-#position_max: 350
+#position_max: 
+
+position_max: 380
+position_endstop: -5
+position_min: -5
 
 ##--------------------------------------------------------------------
-homing_speed: 25   #Max 100
-homing_retract_dist: 5
-homing_positive_dir: true
 
-##  Make sure to update below for your relevant driver (2208 or 2209)
+##  Make sure to update below for your relevant driver (2208 or 2209
 [tmc2209 stepper_x]
 uart_pin: P1.10
-interpolate: False
+interpolate: False #um Genauigkeit zu erhöhen
 run_current: 0.8
-sense_resistor: 0.110
-stealthchop_threshold: 0
+#hold_current: 0.500 in Verbindung mit XY-Core & Homeless nicht erlaubt
+#stealthchop_threshold: 50 stealthchop_threshold: 0
+diag_pin: P1.29   # Set to MCU pin connected to TMC DIAG pin
+driver_SGTHRS: 95  # 255 is most sensitive value, 0 is least sensitive
+# sense_resistor: 0.110 //Unklar was das ist
+
 
 ##  Connected to Y on mcu_xye (A Motor)
 [stepper_y]
+microsteps: 64
 step_pin: P0.19
-dir_pin: !P0.20
+dir_pin: P0.20 #nur den
 enable_pin: !P2.8
 rotation_distance: 40
-microsteps: 32
+#endstop_pin: P1.28
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+homing_speed: 25  #Max 100
 full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
-endstop_pin: P1.28
-position_min: 0
+homing_retract_dist: 0
+# homing_positive_dir: true // mir ist dieser Teil unklar
+
 ##--------------------------------------------------------------------
 
 ##  Uncomment for 250mm build
@@ -153,18 +166,27 @@ position_min: 0
 #position_endstop: 350
 #position_max: 350
 
+position_endstop: -5
+position_min: -5
+position_max: 480
+
 ##--------------------------------------------------------------------
-homing_speed: 25  #Max 100
-homing_retract_dist: 5
-homing_positive_dir: true
+
+
+
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_y]
+
 uart_pin: P1.9
-interpolate: False
-run_current: 0.8
-sense_resistor: 0.110
-stealthchop_threshold: 0
+interpolate: False #um Genauigkeit zu erhöhen
+run_current: 0.800
+#hold_current: 0.500 in Verbindung mit XY-Core & Homeless nicht erlaubt
+#stealthchop_threshold: 50 stealthchop_threshold: 0
+diag_pin: P1.28   # Set to MCU pin connected to TMC DIAG pin
+driver_SGTHRS: 95  # 255 is most sensitive value, 0 is least sensitive
+#sense_resistor: 0.110 Unklar as das ist
+
  
 #####################################################################
 #   Z Stepper Settings
@@ -177,18 +199,18 @@ step_pin: z:P2.2
 dir_pin: !z:P2.6
 enable_pin: !z:P2.1
 rotation_distance: 40
-gear_ratio: 80:16
-microsteps: 32
-endstop_pin: z:P1.27
+#gear_ratio: 80:16
+microsteps: 64
+endstop_pin: P1.27 #Achtung der steckt im xy MCU!
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: -0.5
+position_endstop: -0.1 #Probe abstand
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
-#position_max: 210
+position_max: 210
 
 ##  Uncomment below for 300mm build
 #position_max: 260
@@ -197,7 +219,7 @@ position_endstop: -0.5
 #position_max: 310
 
 ##--------------------------------------------------------------------
-position_min: -5
+position_min: -1 #Probe abstand
 homing_speed: 8
 second_homing_speed: 3
 homing_retract_dist: 3
@@ -218,7 +240,7 @@ dir_pin: z:P0.20
 enable_pin: !z:P2.8
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z1]
@@ -236,7 +258,7 @@ dir_pin: !z:P2.11
 enable_pin: !z:P0.21
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z2]
@@ -254,7 +276,7 @@ dir_pin: z:P0.11
 enable_pin: !z:P2.12
 rotation_distance: 40
 gear_ratio: 80:16
-microsteps: 32
+microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
 [tmc2209 stepper_z3]
@@ -292,6 +314,7 @@ heater_pin: P2.7
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for NTC 100k 3950 thermistors
 #sensor_type:
+sensor_type: Generic 3950
 sensor_pin: P0.24
 min_temp: 10
 max_temp: 270
@@ -324,13 +347,13 @@ stealthchop_threshold: 0
 heater_pin: z:P2.3
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for Keenovo heaters
-#sensor_type:
+sensor_type: Generic 3950
 sensor_pin: z:P0.25
 ##  Adjust max_power so it doesn't exceed the SSR rating. The Omron G3NA-210B-DC5 SSR is rated at 4 amps without a heatsink.
 ##  The formula is "4 / (Wattage_of_bed_heater / Mains_voltage) = max_power"
 ##  If max_power is greater than 1.0, use 1.0
 max_power: 0.6
-min_temp: 0
+min_temp: -200 #ACHTUNG!!!! ÄNDERN!!!!
 max_temp: 120
 control: pid
 pid_kp: 58.437
