xy brauchen andere virtuelle edstop werte, z ist noch schrott es bewegt sich nur ein motor; ansonsten schon ganz gut

--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -64,9 +64,10 @@
 ##  [Y in Y] - A Motor
 ##  [E in E0] - Extruder
 [mcu]
+serial: /dev/serial/by-id/usb-Klipper_lpc1768_11A00001C71CB6AE4EBBB155432100F5-if00
 ##  Obtain definition by "ls /dev/serial/by-id/*" then unplug to verify
 ##--------------------------------------------------------------------
-serial: //dev/serial/by-id/usb-Klipper_lpc1768_11A00001C71CB6AE4EBBB155432100F5-if00
+
 ##--------------------------------------------------------------------
 
 ##  MCU for Z steppers
@@ -193,7 +194,7 @@ driver_SGTHRS: 95  # 255 is most sensitive value, 0 is least sensitive
 #####################################################################
 
 ## Z MCU - In X Position
-## Z0 Stepper - Front Left
+## Z0 Stepper - Front Left (ich habe das als X0 Y0 verstanden)
 [stepper_z]
 step_pin: z:P2.2
 dir_pin: !z:P2.6
@@ -201,7 +202,7 @@ enable_pin: !z:P2.1
 rotation_distance: 40
 #gear_ratio: 80:16
 microsteps: 64
-endstop_pin: P1.27 #Achtung der steckt im xy MCU!
+endstop_pin: !P1.27 #Achtung der steckt im xy MCU!
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
@@ -232,7 +233,7 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##  Z MCU - In Y Position
+##  Z MCU - In Y Position (ich habe das als x+ y+ verstanden)
 ##  Z1 Stepper - Rear Left
 [stepper_z1]
 step_pin: z:P0.19
@@ -251,7 +252,7 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 ##  Z MCU - In Z Position
-##  Z2 Stepper - Rear Right
+##  Z2 Stepper - Rear Right (ich habe das als x0 y+ verstanden)
 [stepper_z2]
 step_pin: z:P0.22
 dir_pin: !z:P2.11
@@ -268,7 +269,7 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##  Z MCU - In E0 Position
+##  Z MCU - In E0 Position (ich habe das als x0 y0 verstanden)
 ##  Z3 Stepper - Front Right
 [stepper_z3]
 step_pin: z:P2.13
@@ -371,7 +372,7 @@ pid_kd: 363.769
 ##	If your probe is NO instead of NC, change pin to ^!z:P0.10
 pin: ^z:P0.10
 x_offset: 0
-y_offset: 25.0
+y_offset: 0
 z_offset: 0
 speed: 10.0
 samples: 3
@@ -481,15 +482,15 @@ z_hop:10
 
 ##  Gantry Corners for 350mm Build
 ##  Uncomment for 350mm build
-#gantry_corners:
-#   -60,-10
-#   410,420
+gantry_corners:
+   -60,-10
+   410,420
 ##  Probe points
-#points:
-#   50,25
-#   50,275
-#   300,275
-#   300,25
+points:
+   50,25
+   50,275
+   300,275
+   300,25
 
 #--------------------------------------------------------------------
 speed: 100
