--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -167,9 +167,9 @@ homing_retract_dist: 0
 #position_endstop: 350
 #position_max: 350
 
-position_endstop: -5
-position_min: -5
-position_max: 480
+position_endstop: -80
+position_min: -80
+position_max: 400
 
 ##--------------------------------------------------------------------
 
@@ -199,15 +199,15 @@ driver_SGTHRS: 70  # 255 is most sensitive value, 0 is least sensitive
 step_pin: z:P2.2
 dir_pin: !z:P2.6
 enable_pin: !z:P2.1
-rotation_distance: 40
-#gear_ratio: 80:16
+rotation_distance: 8.0            # Spindel bewegt die Achse 8 mm pro Umdrehung
+gear_ratio: 1:1                     # kein Getriebe
 microsteps: 64
-endstop_pin: !P1.27 #Achtung der steckt im xy MCU!
+endstop_pin: probe:z_virtual_endstop  # Z-Probe als Endstop verwenden
 ##  Z-position of nozzle (in mm) to z-endstop trigger point relative to print surface (Z0)
 ##  (+) value = endstop above Z0, (-) value = endstop below
 ##  Increasing position_endstop brings nozzle closer to the bed
 ##  After you run Z_ENDSTOP_CALIBRATE, position_endstop will be stored at the very end of your config
-position_endstop: -0.1 #Probe abstand
+# position_endstop: -0.1 #Raus und stattdessen Probe sectionProbe abstand
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
@@ -233,14 +233,14 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##  Z MCU - In Y Position (ich habe das als x+ y+ verstanden)
+##  Z MCU - In Y Position (ich habe das als x0 y+ verstanden)
 ##  Z1 Stepper - Rear Left
 [stepper_z1]
 step_pin: z:P0.19
-dir_pin: z:P0.20
+dir_pin: !z:P0.20
 enable_pin: !z:P2.8
-rotation_distance: 40
-gear_ratio: 80:16
+rotation_distance: 8.0            # Spindel bewegt die Achse 8 mm pro Umdrehung
+gear_ratio: 1:1                     # kein Getriebe
 microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -252,13 +252,13 @@ sense_resistor: 0.110
 stealthchop_threshold: 0
 
 ##  Z MCU - In Z Position
-##  Z2 Stepper - Rear Right (ich habe das als x0 y+ verstanden)
+##  Z2 Stepper - Rear Right (ich habe das als x+ y+ verstanden)
 [stepper_z2]
 step_pin: z:P0.22
 dir_pin: !z:P2.11
 enable_pin: !z:P0.21
-rotation_distance: 40
-gear_ratio: 80:16
+rotation_distance: 8.0            # Spindel bewegt die Achse 8 mm pro Umdrehung
+gear_ratio: 1:1                     # kein Getriebe
 microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -269,14 +269,14 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
-##  Z MCU - In E0 Position (ich habe das als x0 y0 verstanden)
+##  Z MCU - In E0 Position (ich habe das als x+ y0 verstanden)
 ##  Z3 Stepper - Front Right
 [stepper_z3]
 step_pin: z:P2.13
-dir_pin: z:P0.11
+dir_pin: !z:P0.11
 enable_pin: !z:P2.12
-rotation_distance: 40
-gear_ratio: 80:16
+rotation_distance: 8.0            # Spindel bewegt die Achse 8 mm pro Umdrehung
+gear_ratio: 1:1                     # kein Getriebe
 microsteps: 64
 
 ##  Make sure to update below for your relevant driver (2208 or 2209)
@@ -368,16 +368,18 @@ pid_kd: 363.769
 ##  Inductive Probe
 ##  This probe is not used for Z height, only Quad Gantry Leveling
 ##  Z_MAX on mcu_z
+
+
+##Probe
 [probe]
-##	If your probe is NO instead of NC, change pin to ^!z:P0.10
-pin: ^z:P0.10
-x_offset: 0
-y_offset: 0
-z_offset: 0
-speed: 10.0
-samples: 3
+pin: !z:P1.27                  # Der Pin, an dem die Z-Probe angeschlossen ist - derzeit mcu statt mcu-z
+x_offset: -22                # Z-Probe liegt 22 mm links von der Düse (negativer Wert)
+y_offset: 5                  # Z-Probe liegt 5 mm hinter der Düse (positiver Wert)
+z_offset: -0.1               # Kalibrierter Z-Offset (diesen Wert musst du nach der Kalibrierung anpassen)
+speed: 5                     # Geschwindigkeit der Z-Probe-Bewegung
+samples: 3                   # Anzahl der Proben pro Messpunkt   
 samples_result: median
-sample_retract_dist: 3.0
+sample_retract_dist: 3.0     
 samples_tolerance: 0.006
 samples_tolerance_retries: 3
 
@@ -445,7 +447,7 @@ timeout: 1800
 ##  Update -10,-10 to the XY coordinates of your endstop pin 
 ##  (such as 157,305) after going through Z Endstop Pin
 ##  Location Definition step.
-home_xy_position:-10,-10
+home_xy_position:190,200
 speed:100
 z_hop:10
 
@@ -483,14 +485,14 @@ z_hop:10
 ##  Gantry Corners for 350mm Build
 ##  Uncomment for 350mm build
 gantry_corners:
-   -60,-10
-   410,420
+   -95,0
+   485,400
 ##  Probe points
 points:
-   50,25
-   50,275
-   300,275
-   300,25
+   25,25
+   25,375
+   375,375
+   375,25
 
 #--------------------------------------------------------------------
 speed: 100
@@ -554,6 +556,13 @@ max_adjust: 10
 #####################################################################
 #   Macros
 #####################################################################
+#[homing_override]
+#gcode:
+#   G28 X Y       # Fährt nur X und Y Achsen
+#   G1 X100 Y100 F6000   # Fährt zur Mitte des Betts, X=100, Y=100 (anpassen an die Größe des Betts)
+#   G28 Z         # Fährt Z-Homing (Z-Probe wird verwendet)
+#set_position_z: 0.0   # Setzt Z auf 0 nach Homing
+
 [gcode_macro PARK]
 gcode:
     {% set th = printer.toolhead %}
