--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -135,7 +135,7 @@ run_current: 0.8
 #hold_current: 0.500 in Verbindung mit XY-Core & Homeless nicht erlaubt
 #stealthchop_threshold: 50 stealthchop_threshold: 0
 diag_pin: P1.29   # Set to MCU pin connected to TMC DIAG pin
-driver_SGTHRS: 70  # 255 is most sensitive value, 0 is least sensitive
+driver_SGTHRS: 60  # 255 is most sensitive value, 0 is least sensitive
 # sense_resistor: 0.110 //Unklar was das ist
 
 
@@ -185,7 +185,7 @@ run_current: 0.800
 #hold_current: 0.500 in Verbindung mit XY-Core & Homeless nicht erlaubt
 #stealthchop_threshold: 50 stealthchop_threshold: 0
 diag_pin: P1.28   # Set to MCU pin connected to TMC DIAG pin
-driver_SGTHRS: 70  # 255 is most sensitive value, 0 is least sensitive
+driver_SGTHRS: 60  # 255 is most sensitive value, 0 is least sensitive
 #sense_resistor: 0.110 Unklar as das ist
 
  
@@ -211,7 +211,7 @@ endstop_pin: probe:z_virtual_endstop  # Z-Probe als Endstop verwenden
 ##--------------------------------------------------------------------
 
 ##  Uncomment below for 250mm build
-position_max: 210
+position_max: 880
 
 ##  Uncomment below for 300mm build
 #position_max: 260
@@ -220,7 +220,7 @@ position_max: 210
 #position_max: 310
 
 ##--------------------------------------------------------------------
-position_min: -1 #Probe abstand
+position_min: 0 #Probe abstand
 homing_speed: 8
 second_homing_speed: 3
 homing_retract_dist: 3
@@ -295,19 +295,19 @@ stealthchop_threshold: 0
 #   E0 on MCU X/Y
 [extruder]
 step_pin: P2.13
-dir_pin: P0.11
+dir_pin: !P0.11
 enable_pin: !P2.12
 ##  Update value below when you perform extruder calibration
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
 ##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
 ##  22.6789511 is a good starting point
-rotation_distance: 22.6789511   #Bondtech 5mm Drive Gears
+rotation_distance: 7.71   #200*16/415
 ##  Update Gear Ratio depending on your Extruder Type
 ##  Use 50:10 for Stealthburner/Clockwork 2
 ##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##  Use 80:20 for M4, M3.1
-gear_ratio: 50:10
-microsteps: 32
+gear_ratio: 50:17
+microsteps: 16
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -343,9 +343,9 @@ stealthchop_threshold: 0
 #   Bed Heater
 #####################################################################
 
-##  SSR Pin - Z board, Fan Pin
+##  Heater läuft erstmal über das Board
 [heater_bed]
-heater_pin: z:P2.3
+heater_pin: z:P2.5
 ## Check what thermistor type you have. See https://www.klipper3d.org/Config_Reference.html#common-thermistors for common thermistor types.
 ## Use "Generic 3950" for Keenovo heaters
 sensor_type: Generic 3950
@@ -353,8 +353,8 @@ sensor_pin: z:P0.25
 ##  Adjust max_power so it doesn't exceed the SSR rating. The Omron G3NA-210B-DC5 SSR is rated at 4 amps without a heatsink.
 ##  The formula is "4 / (Wattage_of_bed_heater / Mains_voltage) = max_power"
 ##  If max_power is greater than 1.0, use 1.0
-max_power: 0.6
-min_temp: -200 #ACHTUNG!!!! ÄNDERN!!!!
+max_power: 0.9
+min_temp: 10
 max_temp: 120
 control: pid
 pid_kp: 58.437
@@ -366,16 +366,16 @@ pid_kd: 363.769
 #####################################################################
 
 ##  Inductive Probe
-##  This probe is not used for Z height, only Quad Gantry Leveling
+##  This probe is used for Z height and Quad Gantry Leveling
 ##  Z_MAX on mcu_z
 
 
 ##Probe
 [probe]
 pin: !z:P1.27                  # Der Pin, an dem die Z-Probe angeschlossen ist - derzeit mcu statt mcu-z
-x_offset: -22                # Z-Probe liegt 22 mm links von der Düse (negativer Wert)
-y_offset: 5                  # Z-Probe liegt 5 mm hinter der Düse (positiver Wert)
-z_offset: -0.1               # Kalibrierter Z-Offset (diesen Wert musst du nach der Kalibrierung anpassen)
+x_offset: -25                # Z-Probe liegt 25 mm links von der Düse (neg Wert)
+y_offset: 2                  # Z-Probe liegt 2 mm hinter der Düse (positiver Wert)
+z_offset: 2.7                # Kalibrierter Z-Offset (diesen Wert musst du nach der Kalibrierung anpassen)
 speed: 5                     # Geschwindigkeit der Z-Probe-Bewegung
 samples: 3                   # Anzahl der Proben pro Messpunkt   
 samples_result: median
@@ -485,12 +485,12 @@ z_hop:10
 ##  Gantry Corners for 350mm Build
 ##  Uncomment for 350mm build
 gantry_corners:
-   -95,0
-   485,400
+   -89,0
+   489,400
 ##  Probe points
 points:
-   25,25
-   25,375
+   50,25
+   50,375
    375,375
    375,25
 
@@ -498,7 +498,8 @@ points:
 speed: 100
 horizontal_move_z: 10
 retries: 5
-retry_tolerance: 0.0075
+#retry_tolerance: 0.0075
+retry_tolerance: 0.1
 max_adjust: 10
 
 #####################################################################
