--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -210,14 +210,10 @@ endstop_pin: probe:z_virtual_endstop  # Z-Probe als Endstop verwenden
 # position_endstop: -0.1 #Raus und stattdessen Probe sectionProbe abstand
 ##--------------------------------------------------------------------
 
-##  Uncomment below for 250mm build
-position_max: 880
+##  Derzeit auf Kabellänge reduziert
+#position_max: 880
+position_max: 400
 
-##  Uncomment below for 300mm build
-#position_max: 260
-
-##  Uncomment below for 350mm build
-#position_max: 310
 
 ##--------------------------------------------------------------------
 position_min: 0 #Probe abstand
