Erste lauffaehige Version incl Shapersensor

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,29 @@
 [include printer_new.cfg]
 [include mainsail.cfg]
-#[include shapersensor.cfg]
+[include shapersensor.cfg]
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = 3hump_ei
+#*# shaper_freq_x = 90.4
+#*# shaper_type_y = mzv
+#*# shaper_freq_y = 45.0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  -0.538306, -0.046431, -0.118931
+#*# 	  -0.460181, -0.109556, -0.078931
+#*# 	  -0.452056, -0.056431, -0.090806
+#*# x_count = 3
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 260.0
+#*# min_y = 30.0
+#*# max_y = 270.0
