--- a/shapersensor.cfg
+++ b/shapersensor.cfg
@@ -1,16 +1,10 @@
+[mcu rpi]
+serial: /tmp/klipper_host_mcu
+
 [adxl345]
-cs_pin: P0.26
-spi_software_miso_pin: P0.8
-spi_software_mosi_pin: P0.9
-spi_software_sclk_pin: P0.7
-axes_map: x,z,y
+cs_pin: rpi:None
+axes_map: -x, z, -y  # Mapping der Sensorachsen auf die Druckerachsen
 
 [resonance_tester]
 accel_chip: adxl345
-probe_points:
-    100, 100, 20  # an example
-
-[input_shaper]
-shaper_freq_x: 0
-shaper_freq_y: 0
-#damping_ratio: 0.1
+probe_points: 190, 200, 20  # an example
