--- a/printer_new.cfg
+++ b/printer_new.cfg
@@ -81,13 +81,15 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_11A00001C71CB6AE4EBBB155432100F5-i
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_1C60000A63A447AF94291B5DC32000F5-if00
 ##--------------------------------------------------------------------
 
+
 [printer]
 kinematics: corexy
 max_velocity: 300  
-max_accel: 3000             #Max 4000
+max_accel: 4000             #Max 5000
 max_z_velocity: 15          #Max 15 for 12V TMC Drivers, can increase for 24V
 max_z_accel: 350
 square_corner_velocity: 5.0
+max_accel_to_decel: 3000
 
 #####################################################################
 #   X/Y Stepper Settings
@@ -122,8 +124,8 @@ full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
 #position_max: 
 
 position_max: 380
-position_endstop: -5
-position_min: -5
+position_endstop: 0
+position_min: -10
 
 ##--------------------------------------------------------------------
 
@@ -216,7 +218,7 @@ position_max: 400
 
 
 ##--------------------------------------------------------------------
-position_min: 0 #Probe abstand
+position_min: -10 #Probe abstand   LEIF
 homing_speed: 8
 second_homing_speed: 3
 homing_retract_dist: 3
@@ -297,13 +299,13 @@ enable_pin: !P2.12
 ##  If you ask for 100mm of filament, but in reality it is 98mm:
 ##  rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
 ##  22.6789511 is a good starting point
-rotation_distance: 7.71   #200*16/415
+rotation_distance:    20
 ##  Update Gear Ratio depending on your Extruder Type
 ##  Use 50:10 for Stealthburner/Clockwork 2
 ##  Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
 ##  Use 80:20 for M4, M3.1
 gear_ratio: 50:17
-microsteps: 16
+microsteps: 32
 full_steps_per_rotation: 200    #200 for 1.8 degree, 400 for 0.9 degree
 nozzle_diameter: 0.400
 filament_diameter: 1.75
@@ -314,7 +316,7 @@ heater_pin: P2.7
 sensor_type: Generic 3950
 sensor_pin: P0.24
 min_temp: 10
-max_temp: 270
+max_temp: 300
 max_power: 1.0
 min_extrude_temp: 170
 control = pid
@@ -371,7 +373,7 @@ pid_kd: 363.769
 pin: !z:P1.27                  # Der Pin, an dem die Z-Probe angeschlossen ist - derzeit mcu statt mcu-z
 x_offset: -25                # Z-Probe liegt 25 mm links von der Düse (neg Wert)
 y_offset: 2                  # Z-Probe liegt 2 mm hinter der Düse (positiver Wert)
-z_offset: 2.7                # Kalibrierter Z-Offset (diesen Wert musst du nach der Kalibrierung anpassen)
+z_offset: 1.75             # LEIF Kalibrierter Z-Offset (diesen Wert musst du nach der Kalibrierung anpassen)
 speed: 5                     # Geschwindigkeit der Z-Probe-Bewegung
 samples: 3                   # Anzahl der Proben pro Messpunkt   
 samples_result: median
@@ -446,6 +448,17 @@ timeout: 1800
 home_xy_position:190,200
 speed:100
 z_hop:10
+
+
+[bed_mesh]
+speed = 120
+mesh_min = 30, 30
+mesh_max = 260, 270  # Anpassen auf dein Bettmaß
+probe_count = 3,3    # Anzahl der Messpunkte (z.B. 5x5 Raster)
+fade_start = 1.0
+fade_end = 10.0
+fade_target = 0
+
 
 
 ##  Use QUAD_GANTRY_LEVEL to level a gantry.
