untestet seperate Extruder configs

--- a/printer.cfg
+++ b/printer.cfg
@@ -1,6 +1,7 @@
 [include printer_new.cfg]
 [include mainsail.cfg]
 [include shapersensor.cfg]
+[include Extruder_BGMV6.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
